# macbash

./: .gitignore  .gitleaks.toml  .gitmodules  .golangci.yml  .hyperi-ci.yaml  .mcp.json  .releaserc.json  .releaserc.yaml  AI-TRAINING-POLICY.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  SCOPE.md  STATE.md  TODO.md  action.yml  build.rs  clippy.toml  deny.toml  go.mod  go.sum  packaging.env  robots.txt  rustfmt.toml
.claude/: .ai-version  settings.json
.claude/commands/: doco.md  load.md  review.md  save.md  setup-claude.md  simplify.md  standards.md
.claude/rules/: README.md  ansible.md  bash.md  ci.md  cpp.md  docker.md  golang.md  k8s.md  python.md  rust.md  sql-clickhouse.md  terraform.md  typescript.md  universal.md
.githooks/: commit-msg  pre-push
.github/workflows/: ci.yml  cross-build.yml  package.yml  release.yml
cmd/macbash/: main.go
internal/cli/: root.go
internal/fixer/: fixer.go
internal/output/: output.go
internal/rules/: loader.go  loader_test.go  pattern_test.go  types.go
internal/scanner/: scanner.go  scanner_test.go
packaging/: README.md  install.sh  nfpm.yaml  render-release.sh  render.sh
packaging/homebrew/: macbash.rb
packaging/scripts/: postinstall.sh  preremove.sh
packaging/templates/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
packaging/templates-release/: nfpm.yaml
scripts/: release-prepare.py  test-local.sh
src/: cli.rs  fixer.rs  lib.rs  main.rs  output.rs  scanner.rs
src/rules/: loader.rs  mod.rs  types.rs
testdata/: sample_linux.sh
testdata/scripts/: backup-manager.sh  (+5 more)
(+19 files in other folders)
